# template-app-agent-spotify

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  TEMPLATE_CHANGES.md  TEMPLATE_SETUP.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
app/: __init__.py  main.py  playlist_manager.py  spotify_client.py  track_selector.py
config/: config.yaml
docs/: README.md  project_pitch.md
docs/development/: CHANGELOG.md  PROJECT_STATUS.md  README.md  requirements.md
docs/diagrams/: README.md  authentication-flow.md  data-flow.md  deployment.md  system-architecture.md  track-selection.md
docs/operations/: README.md  deployment.md  monitoring.md
docs/technical/: README.md  api_integration.md
docs/user_guides/: README.md  config.yaml.example  env.example  persona.md
monitoring/: prometheus.yml
scripts/: get_spotify_token.py  get_spotify_token_manual.py  get_spotify_token_secure.py
templates/: analytics.html  config.html  dashboard.html  logs.html
tests/: __init__.py  conftest.py  test_playlist_manager.py  test_spotify_client.py  test_track_selector.py
tools/: analytics.py  cli.py  create_missing_playlists.py  dashboard.py  debug_track_selection.py  init_database.py  load_test.py  preseed_playlists.py  rename_playlists.py  test_bot.py  test_everything.py  update_playlist_art.py  web_dashboard.py
